# core-power-outage-tracker

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  check-outage.js  extract-api.js  flake.nix  generate.go  go.mod  go.sum  index.html  justfile  opencode.jsonc  outage_client.go  package-lock.json  package.json  test-query.sql
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: j4azsbdhbc6969l6vx1y0bjwp2y6jrgg-source
app/: .gitignore  TEST.md  flake.nix  index.html  justfile  package-lock.json  package.json  vite.config.ts
app/OLD_src/: App.tsx
app/public/: .gitignore  addresses_80421.parquet  outages.parquet  service_lines.pmtiles
app/src/: App.tsx  PWABadge.tsx  constants.ts  duckdb.ts  duckdbManager.ts  main.tsx  useAppInitialize.ts
generator/: .gitignore  README.md  build_addresses_parquet_table.py  build_addresses_table.py  build_outages_table.py  config.yml  convert.py  convert_addresses_to_geojson.py  convert_addresses_to_pmtiles.py  download_addresses_from_arcgis.py  download_service_lines.py  flake.nix  justfile  pyproject.toml
generator/lib/: AddressModel.py  ColoradoArcGisApi.py  Config.py  CorePowerApi.py  LineModel.py  LinesResponseModel.py  TestAddressModel.py  get_bbox_from_addresses.sql
src/: App.tsx
src/components/: Map.tsx
src/hooks/: useShapefileWorker.ts
src/lib/: cache.ts
src/workers/: shapefile.worker.ts
web/: .parcelrc  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.svelte  app.css  database  (+4 more)
(+68 files in other folders)
