[project]
name = "core-power-outage-map"
version = "0.1.0"
description = "Core Power Outage Map"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "duckdb>=1.4.3",
    "geopandas>=1.1.2",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polyline>=2.0.4",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "usaddress>=0.5.16",
]
